--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -18,14 +18,69 @@
     position: absolute;
     top: 0.5rem;
     right: 1.6rem;
-    font-size: 3.5rem;
+    font-size: 4.2rem;
     cursor: pointer;
     border: none;
     background: none;
+    color: #000;
+    transition: all 0.3s;
+    outline: none;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+.add-game-window {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 110rem;
+  border-radius: 9px;
+  z-index: 1000;
+  transition: all 0.5s;
+
+  .btn--close-img-modal {
+    font-family: inherit;
+    color: inherit;
+    position: absolute;
+    top: 0.5rem;
+    right: 1.6rem;
+    font-size: 4.2rem;
+    cursor: pointer;
+    border: none;
+    background: none;
+    color: #fff;
+    transition: all 0.3s;
+
+    &:hover {
+      color: rgba(255, 255, 255, 0.534);
+    }
+  }
+
+  img {
+    width: 100%;
+    box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.466);
+    object-fit: cover;
+    object-position: center;
   }
 }
 
 .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.overlay-2 {
   position: fixed;
   top: 0;
   left: 0;
