--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -9,7 +9,7 @@ $color-grey-light-3: #d3c7c3; // Light text (placeholder)
 $color-grey-dark-1: #615551; // Normal text
 $color-grey-dark-2: #918581; // Lighter text
 
-$gradient: linear-gradient(to right bottom, $color-grad-1, $color-grad-2);
+$gradient: linear-gradient(to right bottom, #ef233c, #2f3e46);
 
 $bp-large: 78.15em; // 1250px
 $bp-medium: 61.25em; // 980px
@@ -48,14 +48,13 @@ body {
 }
 
 .container {
-  max-width: 120rem;
+  max-width: 150rem;
   min-height: 117rem;
   margin: 4vw auto;
   background-color: #fff;
   border-radius: 9px;
   overflow: hidden;
   box-shadow: 0 2rem 6rem 0.5rem rgba($color-grey-dark-1, 0.2);
-
   display: grid;
   grid-template-rows: 10rem minmax(100rem, auto);
   grid-template-columns: 1fr 2fr;
