--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -1,35 +1,25 @@
+.line {
+  border: 1px solid rgba(119, 119, 119, 0.226);
+  width: 100%;
+}
+
 .recipe {
   background-color: $color-grey-light-1;
 
   ///////////
   // FIGURE
   &__fig {
-    height: 32rem;
+    height: 60rem;
     position: relative;
+    width: 100%;
     // transform: scale(1.04) translateY(-1px);
     transform-origin: top;
-
-    &::before {
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-image: linear-gradient(
-        to right bottom,
-        $color-grad-1,
-        $color-grad-2
-      );
-      opacity: 0.6;
-    }
   }
 
   &__img {
     width: 100%;
-    display: block;
     height: 100%;
+    display: block;
     object-fit: cover;
   }
 
@@ -37,7 +27,7 @@
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, 20%) skewY(-6deg);
+    transform: translate(-50%, 43%);
     color: #fff;
     font-weight: 700;
     font-size: 3.25rem;
@@ -50,11 +40,7 @@
       -webkit-box-decoration-break: clone;
       box-decoration-break: clone;
       padding: 1.3rem 2rem;
-      background-image: linear-gradient(
-        to right bottom,
-        $color-grad-1,
-        $color-grad-2
-      );
+      background-image: linear-gradient(to right bottom, #ef233c, #2f3e46);
     }
 
     @media only screen and (max-width: $bp-medium) {
@@ -67,24 +53,28 @@
   &__details {
     display: flex;
     align-items: center;
-    padding: 7.5rem 8rem 3.5rem 8rem;
+    justify-content: center;
+    padding: 7.5rem 6rem 3.5rem 6rem;
+
+    button {
+      margin-left: 3rem;
+    }
   }
 
   &__info {
     font-size: 1.65rem;
-    text-transform: uppercase;
     display: flex;
     align-items: center;
 
     &:not(:last-child) {
-      margin-right: 4.5rem;
+      margin-right: 2.5rem;
     }
   }
 
   &__info-icon {
     height: 2.35rem;
     width: 2.35rem;
-    fill: $color-primary;
+    color: $color-primary;
     margin-right: 1.15rem;
   }
 
@@ -126,20 +116,72 @@
     font-size: 1.6rem;
     line-height: 1.4;
     background-color: $color-grey-light-2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+    h2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      ion-icon {
+        margin-right: 1.5rem;
+        font-size: 2.6rem;
+      }
+    }
   }
 
-  &__ingredient-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2.5rem 3rem;
-    list-style: none;
+  &__images {
+    padding: 5rem 8rem;
+    font-size: 1.6rem;
+    line-height: 1.4;
+    background-color: $color-grey-light-2;
+
+    h2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      ion-icon {
+        margin-right: 1.5rem;
+        font-size: 2.6rem;
+      }
+    }
+
+    &-list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-column-gap: 1.4rem;
+      grid-row-gap: 1.4rem;
+
+      &-image {
+        width: 40rem;
+        height: 35rem;
+        object-fit: cover;
+        cursor: pointer;
+      }
+    }
   }
 
-  &__ingredient {
-    display: flex;
+  &__video {
+    padding: 5rem 8rem;
+    padding-top: 3.4rem;
+    font-size: 1.6rem;
+    line-height: 1.4;
+    background-color: $color-grey-light-2;
+
+    h2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      ion-icon {
+        margin-right: 1rem;
+        font-size: 2.6rem;
+      }
+    }
+
+    &-view {
+      width: 100%;
+    }
   }
 
   &__icon {
@@ -164,13 +206,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
 
-  &__directions-text {
-    font-size: 1.7rem;
-    text-align: center;
-    margin-bottom: 3.5rem;
-    color: $color-grey-dark-2;
+    &-stores {
+      padding: 0rem 2rem;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-column-gap: 1rem;
+      grid-row-gap: 1.4rem;
+
+      a {
+        display: flex;
+        justify-content: center;
+        span {
+          font-size: 1.2rem;
+        }
+      }
+    }
   }
 
   &__publisher {
