--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -10,7 +10,8 @@
 }
 
 .pagination {
-  margin-top: auto;
+  // margin-top: auto;
+  margin-top: 2rem;
   padding: 0 3.5rem;
 
   &::after {
@@ -33,7 +34,8 @@
   color: $color-grey-dark-2;
   font-size: 1.2rem;
   padding: 0 3.5rem;
-  margin-top: 4rem;
+  // margin-top: 4rem;
+  margin-top: auto;
 
   .twitter-link:link,
   .twitter-link:visited {
